<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="beast9.com.mismapas.MainActivity">

    <TextView
        android:id="@+id/tvTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/menu_lugares" />

    <Button
        android:id="@+id/btnKiosco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTexto"
        android:text="@string/punto_kiosco"
        android:padding="@dimen/activity_horizontal_margin"
        android:onClick="irKiosco"/>
    <Button
        android:id="@+id/btnBalandra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnKiosco"
        android:text="@string/punto_balandra"
        android:padding="@dimen/activity_horizontal_margin"
        android:onClick="irBalandra"/>
    <Button
        android:id="@+id/btnTecolote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnBalandra"
        android:text="@string/punto_tecolote"
        android:padding="@dimen/activity_horizontal_margin"
        android:onClick="irTecolote"/>
    <Button
        android:id="@+id/btnTec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnTecolote"
        android:text="@string/punto_tec"
        android:padding="@dimen/activity_horizontal_margin"
        android:onClick="irTec"/>
</RelativeLayout>
